Bindu, Sneha | MOBN-612 | Increased z-index value to make sure appointmentEditor lies on top of other dom elements

--- a/ui/react-components/components/AppointmentEditor/AppointmentEditor.module.scss
+++ b/ui/react-components/components/AppointmentEditor/AppointmentEditor.module.scss
@@ -1,6 +1,6 @@
 .appointmenteditor {
     width: 100%;
-    z-index: 20;
+    z-index: 31;
     position: absolute;
     right: 0;
     top: 0;
